objects/WT_Contact_Center_Link__c.object
<CustomObject>
    <description>Contact Center External Links</description>
    <fields>
        <fullName>WT_Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FXD Links</fullName>
                </value>
                <value>
                    <fullName>Vision Content Links</fullName>
                </value>
                <value>
                    <fullName>Universal Links</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Icon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Contact Center Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Category__c</columns>
        <columns>WT_URL__c</columns>
        <columns>WT_SortOrder__c</columns>
        <columns>WT_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contact Center Links</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Center Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>